plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.10-SNAPSHOT'
    id 'io.spring.dependency-management' version '1.1.7'
    id "com.diffplug.spotless" version "6.23.3"
}

group = 'org.aibe4'
version = '0.0.1-SNAPSHOT'
description = 'Dodeul'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url = 'https://repo.spring.io/snapshot' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.5.9'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    // https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.4.0'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.15'

    // MySQL Driver
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // QueryDSL
    // QueryDSL 라이브러리 (쿼리를 작성할 수 있게 해줌)
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'

    // Q클래스 생성 기능 (컴파일 시점에 Entity를 보고 Q클래스를 만들어줌)
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"

    // java.lang.NoClassDefFoundError 방지 (Spring Boot 3.x 필수)
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    runtimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

spotless {
    java {
        target '**/*.java'
        // 불필요한 변경 방지를 위해 코드 포맷팅 비활성화
        // 구글 스타일(AOSP) = 들여쓰기 4칸 적용
        // googleJavaFormat().aosp()

        // importOrder() // import 순서 정의
        removeUnusedImports() // 안 쓰는 import 제거
        trimTrailingWhitespace() // 끝 공백 제거
        endWithNewline() // 파일 끝 빈 줄 추가
    }
}

tasks.named('compileJava') {
    dependsOn 'spotlessApply'
}

tasks.named('test') {
    useJUnitPlatform()
}
